# loongson_streetlight

./: README.md
RuoYi-App/: .gitignore  config.js  manifest.json  package.json  pages.json
RuoYi-App/pages/: index.vue  index1.vue
RuoYi-App/pages/mine/: index.vue
RuoYi-App/pages/work/: index - 副本.vue  index.vue
loongson_streetlight/: .clang-format  .gitignore  CMakeLists.txt
loongson_streetlight/device/: CMakeLists.txt  api_mgr.cpp  api_mgr.h  device.ini  global.h  gpio.cpp  gpio.h  inifile.h  main.cpp  net_client.cpp  net_client.h  net_timer.cpp  pwm.cpp  pwm.h  rs485.cpp  rs485.h  stdafx.h  sys_timer.cpp  sys_timer.h  thread_group.h
loongson_streetlight/lower/: CMakeLists.txt  api_session.cpp  api_session.h  global.cpp  global.h  inifile.cpp  lower.ini  main.cpp  net_client.cpp  net_client.h  net_timer.h  stdafx.cpp  targetver.h  thread_group.cpp
streetlight/: pom.xml
streetlight/ruoyi-admin/: pom.xml
streetlight/ruoyi-admin/src/main/java/com/ruoyi/: RuoYiApplication.java
streetlight/ruoyi-admin/src/main/java/com/ruoyi/server/: Client.java  ClientMgr.java  NetCode.java  NettyServer.java  NettyServerHandler.java  TagHandler.java
streetlight/ruoyi-admin/src/main/java/com/ruoyi/server/handler/: ActiveHandler.java  LoginHandler.java  Pm2p5Handler.java  PwmGetDutyCycleHandler.java  ThlHandler.java  WindDirectionHandler.java  WindSpeedHandler.java
streetlight/ruoyi-admin/src/main/java/com/ruoyi/server/message/: ActiveRespVo.java  LoginRespVo.java  LoginVo.java  Pm2p5Vo.java  PwmGetDutyCycleVo.java  PwmSetDutyCycleVo.java  TagVo.java  ThlVo.java  WindDirectVo.java  WindSpeedVo.java
streetlight/ruoyi-admin/src/main/java/com/ruoyi/system/controller/: ZDeviceController.java  ZInspectionController.java
streetlight/ruoyi-admin/src/main/java/com/ruoyi/system/domain/: ZDevice.java  ZInspection.java
streetlight/ruoyi-admin/src/main/java/com/ruoyi/system/mapper/: ZDeviceMapper.java  ZInspectionMapper.java
streetlight/ruoyi-admin/src/main/java/com/ruoyi/system/service/: IZDeviceService.java  IZInspectionService.java
streetlight/ruoyi-admin/src/main/java/com/ruoyi/system/service/impl/: ZDeviceServiceImpl.java  ZInspectionServiceImpl.java
streetlight/ruoyi-admin/src/main/resources/: application-druid.yml  application.yml
streetlight/ruoyi-admin/src/main/resources/mapper/system/: ZDeviceMapper.xml  ZInspectionMapper.xml
streetlight/ruoyi-framework/src/main/java/com/ruoyi/framework/config/: SecurityConfig.java
streetlight/ruoyi-system/src/main/java/com/ruoyi/system/mapper/: SensorMapper.java
streetlight/ruoyi-ui/: .env.development  .env.production  .env.staging  package.json  vue.config.js
streetlight/ruoyi-ui/src/: App.vue
streetlight/ruoyi-ui/src/api/system/: device.js  inspection.js
streetlight/ruoyi-ui/src/components/ImageUpload/: index.vue
streetlight/ruoyi-ui/src/views/: index copy.vue  index.vue  login.vue  register.vue
streetlight/ruoyi-ui/src/views/system/device/: index.vue
streetlight/ruoyi-ui/src/views/system/inspection/: index.vue
streetlight/sql/: streetlight.sql
